--- a/QuizzyVoote/app/src/main/res/layout/extra_list_item_show_quizzes.xml
+++ b/QuizzyVoote/app/src/main/res/layout/extra_list_item_show_quizzes.xml
@@ -38,5 +38,21 @@
             android:text="QUIZ_NAME"
             android:textSize="24sp"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="310dp"
+            android:layout_marginTop="40dp"
+            android:text="до" />
+
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="330dp"
+            android:layout_marginTop="40dp"
+            android:text="DATE" />
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
