--- a/QuizzyVoote/app/src/main/res/layout/activity_pass_the_quiz.xml
+++ b/QuizzyVoote/app/src/main/res/layout/activity_pass_the_quiz.xml
@@ -9,10 +9,9 @@
         android:id="@+id/btn_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Отправить"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_answers"
@@ -42,6 +41,15 @@
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textView_label_creator"
         app:layout_constraintTop_toTopOf="@+id/textView_label_creator" />
+
+    <TextView
+        android:id="@+id/tv_quiz_answer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="QUIZ_ANSWER"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/sdhfj"
+        app:layout_constraintStart_toEndOf="@+id/sdhfj" />
 
     <TextView
         android:id="@+id/tv_quiz_id"
@@ -77,6 +85,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Создал: "
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/textView_label_name"
+        app:layout_constraintTop_toBottomOf="@+id/textView_label_name" />
+
+    <TextView
+        android:id="@+id/sdhfj"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Вы ответили:"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/textView_label_name"
         app:layout_constraintTop_toBottomOf="@+id/textView_label_name" />
