--- a/QuizzyVoote/app/src/main/res/layout/activity_show_quiz_list.xml
+++ b/QuizzyVoote/app/src/main/res/layout/activity_show_quiz_list.xml
@@ -3,24 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/style_button_main_action">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_quiz_list"
         android:layout_width="410dp"
-        android:layout_height="314dp"
-        android:background="@android:drawable/title_bar"
+        android:layout_height="wrap_content"
         android:paddingLeft="3dp"
         android:paddingTop="5dp"
         android:paddingRight="3dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rv_quiz_list" />
 </androidx.constraintlayout.widget.ConstraintLayout>
