--- a/QuizzyVoote/app/src/main/res/layout/extra_list_item_add_question.xml
+++ b/QuizzyVoote/app/src/main/res/layout/extra_list_item_add_question.xml
@@ -9,9 +9,9 @@
 
     <TextView
         android:id="@+id/tw_question"
-        android:layout_width="350dp"
+        android:layout_width="410dp"
         android:layout_height="50dp"
-        android:background="@drawable/style_textview_round"
+        android:background="?android:attr/fastScrollTrackDrawable"
         android:focusable="false"
         android:maxLength="30"
         android:padding="10dp"
@@ -26,13 +26,13 @@
         android:id="@+id/btn_delete_question"
         android:layout_width="70dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="36dp"
         android:backgroundTint="@android:color/holo_red_light"
-        android:text="DEL"
+        android:text="X"
         android:textColor="@android:color/background_dark"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/tw_question"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tw_question"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
