--- a/QuizzyVoote/app/src/main/res/layout/extra_list_item_show_quizzes.xml
+++ b/QuizzyVoote/app/src/main/res/layout/extra_list_item_show_quizzes.xml
@@ -5,12 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="3dp"
-    android:background="@drawable/style_textview_round">
+    android:background="@drawable/style_button_main_action">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_quiz"
         android:layout_width="409dp"
         android:layout_height="57dp"
+        android:background="?android:attr/scrollbarThumbVertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -25,7 +28,7 @@
             android:id="@+id/tv_quiz_creator_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="60dp"
+            android:layout_marginLeft="290dp"
             android:layout_marginTop="3dp"
             android:text="CREATOR_NAME" />
 
@@ -36,6 +39,7 @@
             android:layout_marginLeft="3dp"
             android:layout_marginTop="24dp"
             android:text="QUIZ_NAME"
+            android:textColor="@android:color/background_dark"
             android:textSize="24sp"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,8 +55,9 @@
             android:id="@+id/tv_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="330dp"
+            android:layout_marginLeft="333dp"
             android:layout_marginTop="40dp"
-            android:text="DATE" />
+            android:text="DATE"
+            android:textColor="@android:color/background_dark" />
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
