--- a/QuizzyVoote/app/src/main/res/layout/activity_pass_the_quiz.xml
+++ b/QuizzyVoote/app/src/main/res/layout/activity_pass_the_quiz.xml
@@ -3,26 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:background="@drawable/style_button_main_action">
 
     <Button
         android:id="@+id/btn_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="407dp"
+        android:layout_height="46dp"
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="@android:color/holo_green_light"
         android:text="Отправить"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/rv_answers"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_answers"
         android:layout_width="409dp"
-        android:layout_height="332dp"
-        android:layout_marginTop="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         android:padding="5dp"
         app:layoutManager="LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_label_creator" />
 
     <TextView
         android:id="@+id/tv_label_name"
@@ -30,6 +33,7 @@
         android:layout_height="wrap_content"
         android:text="QUIZ_NAME"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView_label_name"
         app:layout_constraintTop_toBottomOf="@+id/tv_quiz_id" />
 
@@ -39,6 +43,7 @@
         android:layout_height="wrap_content"
         android:text="QUIZ_CREATOR"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView_label_creator"
         app:layout_constraintTop_toTopOf="@+id/textView_label_creator" />
 
@@ -48,6 +53,7 @@
         android:layout_height="wrap_content"
         android:text="QUIZ_ANSWER"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/sdhfj"
         app:layout_constraintStart_toEndOf="@+id/sdhfj" />
 
@@ -57,6 +63,7 @@
         android:layout_height="wrap_content"
         android:text="QUIZ_ID"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView_label_id"
         app:layout_constraintTop_toTopOf="@+id/textView_label_id" />
 
@@ -75,7 +82,7 @@
         android:id="@+id/textView_label_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Название: "
+        android:text="Название голосования: "
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/textView_label_id"
         app:layout_constraintTop_toBottomOf="@+id/textView_label_id" />
@@ -84,7 +91,8 @@
         android:id="@+id/textView_label_creator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Создал: "
+        android:layout_marginTop="8dp"
+        android:text="Создатель голосования: "
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/textView_label_name"
         app:layout_constraintTop_toBottomOf="@+id/textView_label_name" />
@@ -93,10 +101,10 @@
         android:id="@+id/sdhfj"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Вы ответили:"
+        android:layout_marginTop="8dp"
+        android:text="Вы ответили: "
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/textView_label_name"
-        app:layout_constraintTop_toBottomOf="@+id/textView_label_name" />
+        app:layout_constraintStart_toStartOf="@+id/textView_label_creator"
+        app:layout_constraintTop_toBottomOf="@+id/textView_label_creator" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
