--- a/QuizzyVoote/app/src/main/res/layout/extra_list_item_show_answers.xml
+++ b/QuizzyVoote/app/src/main/res/layout/extra_list_item_show_answers.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,7 +15,7 @@
 
         <RadioGroup
             android:id="@+id/radioGrouppen"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <androidx.cardview.widget.CardView
@@ -24,10 +25,12 @@
 
                 <RadioButton
                     android:id="@+id/rb_select_answer"
-                    android:layout_width="409dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
+                    android:background="?android:attr/fastScrollTrackDrawable"
                     android:layoutDirection="rtl"
+                    android:padding="10dp"
                     android:text="RadioButton"
                     android:textAlignment="textStart"
                     android:textSize="18sp" />
